<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome to Shoe Store</string>
    <string name="explainer">Shoe Store is an app that gives you a way to,\n\nWell\n\nStore shoes.</string>
    <string name="title">SHOE STORE</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_text">Your shoes will show\n\nEach shoe has it\'s own set of details\n\nAdd all the shoes you\'d like</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="size">Size</string>
    <string name="company">Company</string>
    <string name="name">Name</string>
    <string name="go_to_shoe_list">Go To Shoe List</string>
    <string name="add">Add</string>
</resources>
