<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/emailField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="367dp" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="443dp" />

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            tools:layout_editor_absoluteX="22dp"
            tools:layout_editor_absoluteY="388dp" />

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            tools:layout_editor_absoluteX="23dp"
            tools:layout_editor_absoluteY="462dp" />

        <Button
            android:id="@+id/createLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="538dp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            tools:layout_editor_absoluteX="243dp"
            tools:layout_editor_absoluteY="534dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>