<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.ShoeDetailFragment">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />

        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.ShoeViewModel" />
    </data>

    <!--ConstraintLayout is used for simplicity to organize all views-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shoeDetailConstraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/name"
            app:layout_constraintBaseline_toBaselineOf="@+id/name"
            app:layout_constraintEnd_toStartOf="@+id/name"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:ems="12"
            android:text="@={shoe.name}"
            app:layout_constraintBottom_toTopOf="@id/company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/name_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/company_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/company"
            app:layout_constraintBaseline_toBaselineOf="@+id/company"
            app:layout_constraintEnd_toStartOf="@+id/company"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:ems="12"
            android:text="@={shoe.company}"
            app:layout_constraintBottom_toTopOf="@id/size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/company_label"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/size"
            android:inputType="numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/size"
            app:layout_constraintEnd_toStartOf="@+id/size"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:ems="12"
            android:text="@={`` + shoe.size}"
            app:layout_constraintBottom_toTopOf="@id/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/size_label"
            app:layout_constraintTop_toBottomOf="@id/company" />

        <TextView
            android:id="@+id/description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/description"
            app:layout_constraintBaseline_toBaselineOf="@+id/description"
            app:layout_constraintEnd_toStartOf="@+id/description"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:ems="12"
            android:text="@={shoe.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/description_label"
            app:layout_constraintTop_toBottomOf="@id/size"
            app:layout_constraintBottom_toTopOf="@id/save"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintBaseline_toBaselineOf="@+id/save"
            app:layout_constraintEnd_toStartOf="@+id/save"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/save"
            android:onClick="@{() -> shoeViewModel.addShoe(shoe)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel"
            app:layout_constraintTop_toBottomOf="@id/description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>